# LSD-limine

./: .gitignore  Cargo.toml  README  README.md  build.rs
.cargo/: config.toml  runner.sh
LSD/: Cargo.toml  virt.lds
LSD-Userspace/: Cargo.toml  virt.lds
LSD-Userspace/src/: main.rs
LSD/src/: lib.rs  main.rs  timing.rs  uart.rs  userspace.rs
LSD/src/arch/: mod.rs
LSD/src/arch/riscv/: mod.rs  regs.rs  syscalls.rs
LSD/src/drivers/: mod.rs
LSD/src/drivers/goldfish_rtc/: mod.rs
LSD/src/drivers/pci/: mod.rs  slot.rs
LSD/src/drivers/pci/nvme/: controller_raw.rs  mod.rs  queue.rs
LSD/src/drivers/virtio/: mod.rs
LSD/src/drivers/virtio/entropy/: mod.rs
LSD/src/drivers/virtio/input/: mod.rs  structs.rs
LSD/src/drivers/virtio/splitqueue/: mod.rs  ring.rs
LSD/src/drivers/virtio/splitqueue/depsplit/: descriptor.rs  mod.rs  ring.rs
LSD/src/libs/: mod.rs  volatile.rs
LSD/src/memory/: dma.rs  linked_list.rs  mod.rs  pmm.rs  vmm.rs
LSD/src/traps/: mod.rs  plic.rs  task.rs
LSD/src/utils/: linker.rs
bare-bones/: Cargo.toml  virt.lds
bare-bones/.cargo/: config.toml
bare-bones/src/: main.rs
conf/: linker.ld
config/: spark.cfg
lsd_lib/: Cargo.toml
lsd_lib/src/: alloc.rs  io.rs  lib.rs  raw_calls.rs  thread.rs  time.rs
null_task/: Cargo.toml  build.rs  virt.lds
null_task/src/: main.rs
src/: boot.s  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
