[package]
name = "lsd"
version = "0.1.0"
authors = ["Lilly Anderson"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin = "0.9"
fdt = "0.1.5"
bitfield = "0.14.0"
bitflags = "2.2.1"
sbi = "0.2.0"
vmem = { git = "https://github.com/archaic-archea/vmem.git" }
sifive-plic = { git = "https://github.com/archaic-archea/sifive-plic" }

[dependencies.limine]
git = "https://github.com/bolt-os/limine-rs"
rev = "658a9d9"